testdata/baselines/reference/submodule/compiler/expandoFunctionSymbolPropertyJs.errors.txt
/a.js(4,14): error TS8010: Type annotations can only be used in TypeScript files.


==== /types.ts (0 errors) ====
    export const symb = Symbol();
    
    export interface TestSymb {
      (): void;
      readonly [symb]: boolean;
    }
    
==== /a.js (1 errors) ====
    import { symb } from "./types";
    
    /**
     * @returns {import("./types").TestSymb}
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    export function test() {
      function inner() {}
      inner[symb] = true;
      return inner;
    }